# tv-ai-trading-setups

./: .gitignore  README.md  browser-use-test.py  gemini_trading_setup.py  helper_func.py  llm_prompts.py  llm_prompts_proposal.txt  llm_trading_setup.py  llm_trading_summary.py  main.py  main_new.py  main_temp.py  o3-mini_trading_setup.py  playwright_test.py  playwright_tradingview.py  pyproject.toml  tasks.py  test.py
