[project]
name = "tv-ai-trading-setups"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litellm (>=1.34.21,<2.0.0)",
    "openai (>=1.61.0,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "playwright (>=1.50.0,<2.0.0)",
    "anthropic (>=0.45.2,<0.46.0)",
    "groq (>=0.18.0,<0.19.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-auto-export]
output = "requirements.txt"
without_hashes = true
